--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ phone:
 email:              jonas.haldemann@space.unibe.ch # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
-background_image:   /images/bg.jpg
+background_image:   /images/bg_blue.jpg
 # Tip: The color palette and other styles can be configured in /_sass/lib/_vars.scss
 slapform_thankyou_page: /thank-you
 
